--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<h1>Collaborative Perspective</h1>
+								<h1>Collaborative Perspectives</h1>
 								<p>"If I have seen further, it is by standing on the shoulders of giants." – Isaac Newton (1675)</p>
 							</div>
 						</div>
