--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 								<p>The first Thorson module was very important to me because I had a hard time expressing my feelings in 
 									a way that other people could understand. I didn't consider writing as one of my strong points but 
 									through the mentorship of Melanie Brandt and support of my peers, I learned how to dig deep into myself 
-									and talk about my life.
+									and talk about my life. While revising this written piece I spent most of my time smoothing at sentences
+									that did not flow well together. I decided to leave most of the original content because it helpes highlight
+									the progress I have made during the past year.
 								</p>
 								<embed src="images/Module1.pdf" type="application/pdf" width="100%" height="800px">
 								&nbsp;&nbsp;
@@ -98,7 +100,9 @@
 									problems proved to be just as complicated as they sound. Dealing with a problem that has no intrinsic solution 
 									due to the nature of the biases that surround it helped me understand the value of all-including research 
 									(ethics, social/technical issues, economics, etc...). Not every problem can be solved by setting the homogeneous 
-									equation to zero (differential equations reference).
+									equation to zero (differential equations reference). I had a hard time making revisions to this paper because it 
+									is probably the piece I am most proud of writing in the first semester. I also smoothed out the overall structure and added a
+									few sentences to help bridge the dsconnect between ethical and technical issues.
 								</p>
 								<embed src="images/Module2.pdf" type="application/pdf" width="100%" height="800px">
 								&nbsp;&nbsp;
@@ -120,7 +124,8 @@
 									been sharpening last semester but also included new aspects and challenges such as effective design 
 									management using Sketchup (see <a href="#work">other work</a>). Collaborating with my team on this project 
 									helped me improve methods of effective communication and compare my growth with other students in a positive 
-									manner.
+									manner. The Executive summary was written by myself and so I spent most of my time making it look more like a
+									summary rather than a paper of its own. I also included polished version of my team's background section.
 								</p>
 								<embed src="images/Module5.pdf" type="application/pdf" width="100%" height="800px">
 								&nbsp;&nbsp;
